@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2020 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2020 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2023 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2023 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-dsp-units
  * Created on: 25 нояб. 2016 г.
@@ -45,8 +45,6 @@ namespace lsp
 
         void Limiter::construct()
         {
-            sDelay.construct();
-
             fThreshold      = GAIN_AMP_0_DB;
             fReqThreshold   = GAIN_AMP_0_DB;
             fLookahead      = 0.0f;
@@ -74,8 +72,6 @@ namespace lsp
 
         void Limiter::destroy()
         {
-            sDelay.destroy();
-
             if (vData != NULL)
             {
                 free_aligned(vData);
@@ -104,9 +100,6 @@ namespace lsp
 
             dsp::fill_one(vGainBuf, buf_size);
             dsp::fill_zero(vTmpBuf, BUF_GRANULARITY);
-
-            if (!sDelay.init(nMaxLookahead + BUF_GRANULARITY))
-                return false;
 
             nMaxSampleRate      = max_sr;
             fMaxLookahead       = max_lookahead;
@@ -148,16 +141,34 @@ namespace lsp
             return old;
         }
 
+        void Limiter::set_mode(limiter_mode_t mode)
+        {
+            if (mode == nMode)
+                return;
+            nMode = mode;
+            nUpdate |= UP_MODE;
+        }
+
+        void Limiter::set_sample_rate(size_t sr)
+        {
+            if (sr == nSampleRate)
+                return;
+
+            nSampleRate     = sr;
+            nLookahead      = millis_to_samples(nSampleRate, fLookahead);
+            nUpdate        |= UP_SR;
+        }
+
         float Limiter::set_lookahead(float lk_ahead)
         {
-            float old = fLookahead;
-            if (lk_ahead > fMaxLookahead)
-                lk_ahead = fMaxLookahead;
+            float old   = fLookahead;
+            lk_ahead    = lsp_min(lk_ahead, fMaxLookahead);
             if (old == lk_ahead)
                 return old;
 
             fLookahead      = lk_ahead;
             nUpdate        |= UP_LK;
+            nLookahead      = millis_to_samples(nSampleRate, fLookahead);
 
             return old;
         }
@@ -255,14 +266,9 @@ namespace lsp
         {
             ssize_t attack      = millis_to_samples(nSampleRate, fAttack);
             ssize_t release     = millis_to_samples(nSampleRate, fRelease);
-            if (attack > ssize_t(nLookahead))
-                attack              = nLookahead;
-            else if (attack < 8)
-                attack              = 8;
-            if (release > ssize_t(nLookahead*2))
-                release             = nLookahead*2;
-            else if (release < 8)
-                release             = 8;
+
+            attack              = lsp_limit(attack, 8, ssize_t(nLookahead));
+            release             = lsp_limit(attack, 8, ssize_t(nLookahead*2));
 
             if (nMode == LM_HERM_THIN)
             {
@@ -382,13 +388,9 @@ namespace lsp
             // Update delay settings
             float *gbuf = &vGainBuf[nHead];
             if (nUpdate & UP_SR)
-            {
-                sDelay.clear();
                 dsp::fill_one(gbuf, nMaxLookahead*3 + BUF_GRANULARITY);
-            }
 
             nLookahead          = millis_to_samples(nSampleRate, fLookahead);
-            sDelay.set_delay(nLookahead);
 
             // Update threshold
             if (nUpdate & UP_THRESH)
@@ -628,7 +630,7 @@ namespace lsp
             }
         }
 
-        void Limiter::process(float *dst, float *gain, const float *src, const float *sc, size_t samples)
+        void Limiter::process(float *gain, const float *sc, size_t samples)
         {
             // Force settings update if there are any
             update_settings();
@@ -705,13 +707,8 @@ namespace lsp
                     nHead       = 0;
                 }
 
-                // Gain will be applied to the delayed signal
-                sDelay.process(dst, src, to_do);
-
                 // Decrement number of samples and update pointers
-                dst            += to_do;
                 gain           += to_do;
-                src            += to_do;
                 sc             += to_do;
                 samples        -= to_do;
             }
@@ -793,8 +790,6 @@ namespace lsp
             v->write("vGainBuf", vGainBuf);
             v->write("vTmpBuf", vTmpBuf);
             v->write("vData", vData);
-
-            v->write_object("sDelay", &sDelay);
 
             switch (nMode)
             {
