@@ -11,6 +11,8 @@
 * Added possibility to pass callback function do dspu::Oversamples as an alternative
   to the interface pointer.
 * Updated design of the RLC bandpass filter.
+* Removed the delay outside of the dspu::Limiter module. The caller should implement
+  it's own delay.
 * Updated build scripts.
 
 === 1.0.11 ===
